--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
-    "@types/node": "20.3.3",
+    "@prisma/client": "^4.16.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
@@ -21,7 +24,12 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6",
     "use-context-selector": "^1.4.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.1",
+    "prisma": "^4.16.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
