--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "@splidejs/react-splide": "^0.7.12",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-slideshow-image": "^4.2.1",
     "tailwindcss": "3.3.2",
     "use-context-selector": "^1.4.1"
   },
