--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 
 DATABASE_URL="postgresql://postgres:CH8FEH0RyQAM7qgv@db.alyboydnlvpfenapkuib.supabase.co:5432/postgres"
-NEXT_PUBLIC_SITE_URL=finess-store.vercel.app
+NEXT_PUBLIC_SITE_URL=https://finess-store.vercel.app
