--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma db seed && next build ",
+    "prebuild": "prisma generate && prisma db seed",
+    "build": "next build ",
     "start": "next start",
     "lint": "next lint"
   },
