--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "prisma generate && prisma db seed",
+    "prebuild": "prisma generate",
     "build": "next build ",
     "start": "next start",
     "lint": "next lint"
