--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-slideshow-image": "^4.2.1",
+    "sharp": "^0.32.4",
     "tailwindcss": "3.3.2",
     "use-context-selector": "^1.4.1"
   },
