--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^5.0.0",
     "@splidejs/react-splide": "^0.7.12",
+    "@tailwindcss/forms": "^0.5.4",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
@@ -24,13 +26,16 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "react-input-mask": "^2.0.4",
     "react-multi-carousel": "^2.8.4",
     "react-slideshow-image": "^4.2.1",
     "sharp": "^0.32.4",
     "tailwindcss": "3.3.2",
     "ua-parser-js": "^1.0.35",
-    "use-context-selector": "^1.4.1"
+    "use-context-selector": "^1.4.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.4.1",
