--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-input-mask": "^2.0.4",
     "react-multi-carousel": "^2.8.4",
     "react-slideshow-image": "^4.2.1",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.32.4",
     "tailwindcss": "3.3.3",
     "ua-parser-js": "^1.0.35",
