fixed error in api

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
 DATABASE_URL="postgresql://postgres:CH8FEH0RyQAM7qgv@db.alyboydnlvpfenapkuib.supabase.co:5432/postgres"
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+TOKEN = "Y.M.Desenvolvimento"
