--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@hookform/resolvers": "^3.3.0",
     "@prisma/client": "^5.2.0",
     "@splidejs/react-splide": "^0.7.12",
@@ -21,9 +22,10 @@
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.15",
-    "eslint": "8.47.0",
+    "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "negotiator": "^0.6.3",
+    "next": "^13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -40,11 +42,12 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/node": "^20.5.4",
+    "@types/negotiator": "^0.6.1",
+    "@types/node": "^20.5.6",
     "@types/ua-parser-js": "^0.7.36",
     "eslint-config-prettier": "^9.0.0",
     "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
