--- a/package.json
+++ b/package.json
@@ -13,41 +13,42 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.4.0",
-    "@hookform/resolvers": "^3.3.0",
-    "@prisma/client": "^5.2.0",
+    "@formatjs/intl-localematcher": "^0.5.2",
+    "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^5.6.0",
     "@splidejs/react-splide": "^0.7.12",
-    "@tailwindcss/forms": "^0.5.5",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@vercel/analytics": "^1.0.2",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/react": "18.2.40",
+    "@types/react-dom": "18.2.17",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/edge": "^1.1.1",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.55.0",
+    "eslint-config-next": "14.0.3",
     "negotiator": "^0.6.3",
-    "next": "^13.4.19",
-    "postcss": "8.4.28",
+    "next": "^14.0.3",
+    "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.4",
-    "react-icons": "^4.10.1",
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-input-mask": "^2.0.4",
     "react-multi-carousel": "^2.8.4",
-    "react-slideshow-image": "^4.2.1",
+    "react-slideshow-image": "^4.3.0",
     "react-toastify": "^9.1.3",
-    "sharp": "^0.32.5",
-    "tailwindcss": "3.3.3",
-    "ua-parser-js": "^1.0.35",
+    "sharp": "^0.33.0",
+    "tailwindcss": "3.3.5",
+    "ua-parser-js": "^1.0.37",
     "use-context-selector": "^1.4.1",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/negotiator": "^0.6.1",
-    "@types/node": "^20.5.6",
-    "@types/ua-parser-js": "^0.7.36",
-    "eslint-config-prettier": "^9.0.0",
-    "prisma": "^5.2.0",
+    "@types/negotiator": "^0.6.3",
+    "@types/node": "^20.10.2",
+    "@types/ua-parser-js": "^0.7.39",
+    "eslint-config-prettier": "^9.1.0",
+    "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   }
 }
