--- a/package.json
+++ b/package.json
@@ -1,54 +1,46 @@
 {
-  "name": "finess_store",
+  "name": "newstore",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "prebuild": "prisma generate",
-    "build": "next build ",
+    "dev": "next dev --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.5.2",
-    "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.6.0",
-    "@splidejs/react-splide": "^0.7.12",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/react": "18.2.40",
-    "@types/react-dom": "18.2.17",
-    "@vercel/analytics": "^1.1.1",
-    "@vercel/edge": "^1.1.1",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.55.0",
-    "eslint-config-next": "14.0.3",
-    "negotiator": "^0.6.3",
-    "next": "^14.0.3",
-    "postcss": "8.4.32",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-icons": "^4.12.0",
+    "@hookform/resolvers": "^5.2.1",
+    "@prisma/client": "^6.13.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/functions": "^2.2.11",
+    "next": "15.4.6",
+    "prisma": "^6.13.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
-    "react-multi-carousel": "^2.8.4",
-    "react-slideshow-image": "^4.3.0",
-    "react-toastify": "^9.1.3",
-    "sharp": "^0.33.0",
-    "tailwindcss": "3.3.5",
-    "ua-parser-js": "^1.0.37",
-    "use-context-selector": "^1.4.1",
-    "zod": "^3.22.4"
+    "react-multi-carousel": "^2.8.6",
+    "react-slideshow-image": "^4.3.2",
+    "react-toastify": "^11.0.5",
+    "ua-parser-js": "^2.0.4",
+    "use-context-selector": "^2.0.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@types/negotiator": "^0.6.3",
-    "@types/node": "^20.10.2",
-    "@types/ua-parser-js": "^0.7.39",
-    "eslint-config-prettier": "^9.1.0",
-    "prisma": "^5.6.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20.19.10",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.4.6",
+    "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
+    "typescript": "^5.9.2"
   }
 }
